--- a/MainWindowForm.form
+++ b/MainWindowForm.form
@@ -20,7 +20,7 @@
           <grid id="c8b47" binding="mainPagePanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="Main"/>
+              <tabbedpane title="DBManager"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -104,7 +104,7 @@
                   <text value="Email"/>
                 </properties>
               </component>
-              <component id="fc287" class="javax.swing.JTextField" binding="senderSurnameTextField">
+              <component id="fc287" class="javax.swing.JTextField" binding="senderLastNameTextField">
                 <constraints>
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -112,7 +112,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="61c47" class="javax.swing.JTextField" binding="senderNameTextField">
+              <component id="61c47" class="javax.swing.JTextField" binding="senderFirstNameTextField">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -120,12 +120,12 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="741c8" class="javax.swing.JLabel" binding="senderSurnameLabel">
+              <component id="741c8" class="javax.swing.JLabel" binding="senderLastNameLabel">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Surname"/>
+                  <text value="Last name"/>
                 </properties>
               </component>
               <component id="24c5a" class="javax.swing.JTextField" binding="senderEmailTextField">
@@ -192,12 +192,12 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="62eb3" class="javax.swing.JLabel" binding="senderNameLabel">
+              <component id="62eb3" class="javax.swing.JLabel" binding="senderFirstNameLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Name"/>
+                  <text value="First name"/>
                 </properties>
               </component>
               <component id="15d75" class="javax.swing.JLabel" binding="receiverLabel">
@@ -208,7 +208,7 @@
                   <text value="Receiver information:"/>
                 </properties>
               </component>
-              <component id="e8173" class="javax.swing.JTextField" binding="receiverNameTextField">
+              <component id="e8173" class="javax.swing.JTextField" binding="receiverFirstNameTextField">
                 <constraints>
                   <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -216,7 +216,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="5441b" class="javax.swing.JTextField" binding="receiverSurnameTextField">
+              <component id="5441b" class="javax.swing.JTextField" binding="receiverLastNameTextField">
                 <constraints>
                   <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -224,20 +224,20 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="dd97e" class="javax.swing.JLabel" binding="receiverSurnameLabel">
+              <component id="dd97e" class="javax.swing.JLabel" binding="receiverLastNameLabel">
                 <constraints>
                   <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Surname"/>
+                  <text value="Last name"/>
                 </properties>
               </component>
-              <component id="966e7" class="javax.swing.JLabel" binding="receiverNameLabel">
+              <component id="966e7" class="javax.swing.JLabel" binding="receiverFirstNameLabel">
                 <constraints>
                   <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Name"/>
+                  <text value="First name"/>
                 </properties>
               </component>
               <component id="a08d5" class="javax.swing.JLabel" binding="receiverEmailLabel">
@@ -280,7 +280,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="fefdd" class="javax.swing.JLabel" binding="receiverBuildingNameLabel">
+              <component id="fefdd" class="javax.swing.JLabel" binding="receiverBuildingNumberLabel">
                 <constraints>
                   <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
