User can now track many packs at once by their ID

--- a/GUI/src/main/java/MainWindowForm.form
+++ b/GUI/src/main/java/MainWindowForm.form
@@ -739,7 +739,7 @@
           </component>
         </children>
       </grid>
-      <tabbedpane id="a9367" binding="tabbedPane1" default-binding="true">
+      <tabbedpane id="a9367" binding="loginTabbedPane">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
