--- a/GUI/src/main/java/MainWindowForm.form
+++ b/GUI/src/main/java/MainWindowForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainWindowPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="15" width="671" height="1243"/>
+      <xy x="20" y="15" width="694" height="1243"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -420,6 +420,15 @@
               </component>
             </children>
           </grid>
+          <grid id="b92e3" binding="logOutTab" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Log out"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </grid>
         </children>
       </tabbedpane>
       <grid id="f9c8f" binding="createNewAccountPagePanel" layout-manager="GridLayoutManager" row-count="14" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -438,7 +447,7 @@
               <text value="First name"/>
             </properties>
           </component>
-          <component id="3fba1" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="3fba1" class="javax.swing.JTextField" binding="nameTextFieldNewAccountPage">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -454,7 +463,7 @@
               <text value="Last name"/>
             </properties>
           </component>
-          <component id="5a444" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="5a444" class="javax.swing.JTextField" binding="surnameTextFieldNewAccountPage">
             <constraints>
               <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -470,7 +479,7 @@
               <text value="Mobile number"/>
             </properties>
           </component>
-          <component id="8fde7" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="8fde7" class="javax.swing.JTextField" binding="mobileNumberTextFieldNewAccountPage">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -488,7 +497,7 @@
               <text value="Password"/>
             </properties>
           </component>
-          <component id="143d9" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+          <component id="143d9" class="javax.swing.JPasswordField" binding="passwordPasswordFieldNewAccountPage">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -510,12 +519,6 @@
               <text value="Reenter password"/>
             </properties>
           </component>
-          <component id="b3b4e" class="javax.swing.JTextField" binding="textField5" default-binding="true">
-            <constraints>
-              <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-          </component>
           <component id="89d10" class="javax.swing.JLabel">
             <constraints>
               <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -524,7 +527,7 @@
               <text value="Country"/>
             </properties>
           </component>
-          <component id="d6446" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+          <component id="d6446" class="javax.swing.JTextField" binding="countryTextFieldNewAccountPage">
             <constraints>
               <grid row="9" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -562,7 +565,7 @@
               <text value="Postal code"/>
             </properties>
           </component>
-          <component id="1aa7" class="javax.swing.JTextField" binding="textField7" default-binding="true">
+          <component id="1aa7" class="javax.swing.JTextField" binding="townTextFieldNewAccountPage">
             <constraints>
               <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -570,7 +573,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="e4c52" class="javax.swing.JTextField" binding="textField8" default-binding="true">
+          <component id="e4c52" class="javax.swing.JTextField" binding="buildingNumberTextFieldNewAccountPage">
             <constraints>
               <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -679,7 +682,7 @@
               <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="cbcb2" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+          <component id="cbcb2" class="javax.swing.JTextField" binding="streetTextFieldNewAccountPage">
             <constraints>
               <grid row="10" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -687,7 +690,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="e1e81" class="javax.swing.JTextField" binding="textField10" default-binding="true">
+          <component id="e1e81" class="javax.swing.JTextField" binding="postalCodeTextFieldNewAccountPage">
             <constraints>
               <grid row="11" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -708,7 +711,7 @@
               <text value="Email"/>
             </properties>
           </component>
-          <component id="8c2a7" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+          <component id="8c2a7" class="javax.swing.JTextField" binding="emailTextFieldNewAccountPage">
             <constraints>
               <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="-1"/>
@@ -716,7 +719,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="6da1d" class="javax.swing.JButton" binding="button1" default-binding="true">
+          <component id="6da1d" class="javax.swing.JButton" binding="createAccountButton">
             <constraints>
               <grid row="12" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="40"/>
@@ -734,8 +737,16 @@
               <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Log in"/>
+              <text value="Go log in"/>
             </properties>
+          </component>
+          <component id="a0fdc" class="javax.swing.JPasswordField" binding="passwordAgainPasswordFieldNewAccountPage">
+            <constraints>
+              <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
